# pyacoustid

./: .git-blame-ignore-revs  .hgtags  LICENSE  MANIFEST.in  README.rst  acoustid.py  aidmatch.py  chromaprint.py  fpcalc.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: changelog_reminder.yaml  lint.yaml  main.yml  make_release.yaml
acoustid/: __init__.py  libchroma.py
test/: test_acoustid.py  test_chromaprint.py
