[project]
name = "pyacoustid"
version = "1.2.2"
description = "Bindings for Chromaprint acoustic fingerprinting and the Acoustid API"
authors = [{ name = "Adrian Sampson", email = "adrian@radbox.org" }]
readme = "README.rst"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "audioread",
    "requests",
]

[project.urls]
Homepage = "https://github.com/beetbox/pyacoustid"
Repository = "https://github.com/beetbox/pyacoustid"
"Bug Tracker" = "https://github.com/beetbox/pyacoustid/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "acoustid.py" },
    { include = "chromaprint.py" },
]
include = [
    { path = "aidmatch.py", format = "sdist" },
    { path = "fpcalc.py", format = "sdist" },
]
