[project]
name = "pyacoustid"
version = "1.3.1"
description = "Bindings for Chromaprint acoustic fingerprinting and the Acoustid API"
authors = [{ name = "Adrian Sampson", email = "adrian@radbox.org" }]
readme = "README.rst"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "audioread",
    "requests",
]

[dependency-groups]
dev = [
    "pytest >= 8.4.2",
    "pytest-cov >= 7.0.0",
]
lint = [
    "mypy >= 1.18.2",
    "ruff >= 0.6.4",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/beetbox/pyacoustid"
Repository = "https://github.com/beetbox/pyacoustid"
"Bug Tracker" = "https://github.com/beetbox/pyacoustid/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pipx-install]
poethepoet = ">=0.26"
poetry = ">=2.1"

[tool.poetry]
packages = [
    { include = "acoustid.py" },
    { include = "chromaprint.py" },
]
include = [
    { path = "aidmatch.py", format = "sdist" },
    { path = "fpcalc.py", format = "sdist" },
]

[tool.poe.tasks.check-format]
help = "Check the code for style issues"
cmd = "ruff format --config=pyproject.toml --check --diff"

[tool.poe.tasks.check-types]
help = "Check the code for typing issues. Accepts mypy options."
cmd = "mypy"

[tool.poe.tasks.format]
help = "Format the codebase"
cmd = "ruff format --config=pyproject.toml"

[tool.poe.tasks.lint]
help = "Check the code for linting issues. Accepts ruff options."
cmd = "ruff check --config=pyproject.toml"

[tool.poe.tasks.test]
help = "Run tests with pytest"
cmd = "pytest $OPTS"
env.OPTS.default = "-p no:cov"

[tool.poe.tasks.test-with-coverage]
help = "Run tests and record coverage"
ref = "test"
# record coverage for the main packages
# save xml for coverage upload to codecov
# save html report for local dev use
# measure coverage across logical branches
# show which tests cover specific lines in the code (see the HTML report)
env.OPTS = """
--cov=chromaprint
--cov=acoustid
--cov-report=xml:.reports/coverage.xml
--cov-report=html:.reports/html
--cov-branch
--cov-context=test
"""
[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
future-annotations = true
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "PT", # flake8-pytest-style
    "RUF", # ruff
    "UP", # pyupgrade
    "TC", # flake8-type-checking
    "W", # pycodestyle
]
ignore = [
    "TC006", # no need to quote 'cast's since we use 'from __future__ import annotations'
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"
